@@ -1,3 +1,8 @@
+1004-10-28  Matt Austern  <austern@apple.com>
+
+	PR c++/14124
+	* g++.dg/ext/packed7.C: New test.
+	
 2004-10-28  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	* gcc.dg/visibility-[1-9a].c: Change to use scan-hidden instead of
